--- a/src/styles/tokens.scss
+++ b/src/styles/tokens.scss
@@ -38,9 +38,9 @@
   );
   --gradient-space: linear-gradient(
     to bottom,
-    #000510 0%,
-    #0a0f1a 50%,
-    #000510 100%
+    #00051000 0%,
+    #0a0f1a00 50%,
+    #00051000 100%
   );
 
   /* Тени */
