Начал верстку главной страницы саныча

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,4 @@
-@import "./styles/tokens";
-@import "./styles/base";
-@import "./styles/components";
-@import "./styles/layout";
+@import "./styles/tokens.scss";
+@import "./styles/base.scss";
+@import "./styles/components.scss";
+@import "./styles/layout.scss";
