--- a/src/index.scss
+++ b/src/index.scss
@@ -2,3 +2,4 @@
 @import "./styles/base.scss";
 @import "./styles/components.scss";
 @import "./styles/layout.scss";
+@import "./pages/sanych/SanychLayout.scss"
